# internal/rest/controllers/routes.go
@@ -56,28 +56,26 @@ func Register(
 
 	authGuard := middleware.AuthGuard(authService)
 	adminGuard := middleware.AdminGuard(logger)
-	orginizationGuard := middleware.OrganizationGuard(logger)
-	userGuard := middleware.UserGuard(logger)
 
 	// Authentication
 	e.POST("/login", h.Login)
 	e.POST("/signup", h.Signup)
 
 	// Users
-	e.DELETE("/user", authHandler(h.DeleteUser), authGuard, userGuard)
-	e.GET("/user/invites", authHandler(h.GetUserInvites), authGuard, userGuard)
-	e.POST("/user/invites/:inviteId/", authHandler(h.RespondToInvite), authGuard, userGuard)
+	e.DELETE("/user", authHandler(h.DeleteUser), authGuard)
+	e.GET("/user/invites", authHandler(h.GetUserInvites), authGuard)
+	e.POST("/user/invites/:inviteId", authHandler(h.RespondToInvite), authGuard)
 
 	// Organizations
 	e.POST("/organization", authHandler(h.CreateOrganization), authGuard)
-	e.PUT("/organization", authHandler(h.UpdateOrganization), authGuard, orginizationGuard, adminGuard)
-	e.DELETE("/organization", authHandler(h.DeleteOrganization), authGuard, orginizationGuard, adminGuard)
-	e.GET("/organization/users", authHandler(h.GetUsersInOrganization), authGuard, orginizationGuard)
-	e.POST("/organization/invite", authHandler(h.InviteUsersToOrganization), authGuard, orginizationGuard, adminGuard)
-	e.POST("/organization/users/virtual", authHandler(h.AddVirtualUserToOrganization), authGuard, orginizationGuard, adminGuard)
-	e.POST("/organization/users/:userId/virtual/:virtualUserId", authHandler(h.TransferVirtualUserToUser), authGuard, orginizationGuard, adminGuard)
-	e.DELETE("/organization/users/:userId", authHandler(h.RemoveUserFromOrganization), authGuard, orginizationGuard, adminGuard)
-	e.PUT("/organization/users/:userId", authHandler(h.UpdateUserRole), authGuard, orginizationGuard, adminGuard)
-	e.GET("/organization/top/:topX/measures/:leaderboardType", authHandler(h.GetLeaderboard), authGuard, orginizationGuard)
-	e.POST("/organization/matches", authHandler(h.PostMatch), authGuard, orginizationGuard)
+	e.PUT("/organization", authHandler(h.UpdateOrganization), authGuard, adminGuard)
+	e.DELETE("/organization", authHandler(h.DeleteOrganization), authGuard, adminGuard)
+	e.GET("/organization/users", authHandler(h.GetUsersInOrganization), authGuard)
+	e.POST("/organization/invite", authHandler(h.InviteUsersToOrganization), authGuard, adminGuard)
+	e.POST("/organization/users/virtual", authHandler(h.AddVirtualUserToOrganization), authGuard, adminGuard)
+	e.POST("/organization/users/:userId/virtual/:virtualUserId", authHandler(h.TransferVirtualUserToUser), authGuard, adminGuard)
+	e.DELETE("/organization/users/:userId", authHandler(h.RemoveUserFromOrganization), authGuard, adminGuard)
+	e.PUT("/organization/users/:userId", authHandler(h.UpdateUserRole), authGuard, adminGuard)
+	e.GET("/organization/top/:topX/measures/:leaderboardType", authHandler(h.GetLeaderboard), authGuard)
+	e.POST("/organization/matches", authHandler(h.PostMatch), authGuard)
 }
